syntax="proto3";
package pb;
option csharp_namespace="Pb";

//需要注意 當值是 0 "" false 則不會傳送(待測試)

//msgid:1 C->S
//登入數據
message SignIn {
    string Name=1;
    string Password=2;
}

//msgid:100 S->C
//玩家訊息數據
message PlayerData {
    uint32 Id=1;
    uint32 Money=2;
}

//msgid:150 C->S
//spin業務
message Spin {
    uint32 Bet=1;
}

//msgid:200 S->C
//玩家獲得盤面業務
message TableData {
    string Table=1;
    uint32 Getmoney=2;
}